src/test/error/static.lns
class Test {
   static fn func();
   __init {
      Test.func();  // error
   }
}

fn Test.func() {
}
